[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "void-state-tools"
version = "1.0.0"
description = "Self-Aware AI Infrastructure: A layered introspection system for AI runtime transparency"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
authors = [
    {name = "Void State Team"}
]
keywords = [
    "ai",
    "introspection",
    "self-awareness",
    "distributed-systems",
    "runtime-analysis",
    "hooks",
    "monitoring",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.10.0",
    "networkx>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.4.0",
    "ruff>=0.14.0",
    "black>=23.7.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
]
quantum = [
    "dimod>=0.12.0",
]
distributed = [
    "redis>=4.5.0",
]
monitoring = [
    "prometheus-client>=0.17.0",
    "psutil>=5.9.0",
]
security = [
    "cryptography>=41.0.0",
]
all = [
    "void-state-tools[dev,ml,quantum,distributed,monitoring,security]",
]

[project.scripts]
void-state = "void_state_tools.cli:main"

[project.urls]
Homepage = "https://github.com/apocryphalcontent-max/Void"
Documentation = "https://github.com/apocryphalcontent-max/Void/blob/main/README.md"
Repository = "https://github.com/apocryphalcontent-max/Void"
Issues = "https://github.com/apocryphalcontent-max/Void/issues"

[tool.setuptools]
packages = ["void_state_tools"]

[tool.setuptools.package-data]
void_state_tools = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests", "void_state_tools"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--doctest-modules",
    "--strict-markers",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
